--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ description = "Tests generator for fastapi applications"
 version = "0.1.0"
 license = "MIT"
 
-authors = []
+authors = ["Oleg Bugaichuk"]
 
 readme = "README.md"
 
@@ -21,6 +21,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
+fastapi = "^0.115.6"
+jinja2 = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8"
