--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -14,7 +14,7 @@ build:
       - poetry config virtualenvs.create false
     post_install:
       - |
-        . "$(pwd | rev | sed 's/stuokcehc/svne/' | rev)/bin/activate && poetry install --only main --only docs"
+        . "$(pwd | rev | sed 's/stuokcehc/svne/' | rev)/bin/activate" && poetry install --only main --only docs
 
 sphinx:
   configuration: 'docs/conf.py'
