add scripts to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.nitpick]
 style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
+
+[project.scripts]
+fastest = "fastest:main"
+
+[project.gui-scripts]
+fastest = "fastest:main"
