--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,8 +54,22 @@ build-backend = "poetry.core.masonry.api"
 [tool.nitpick]
 style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
 
+[project]
+name = "fastest"
+description = "Tests generator for fastapi applications"
+version = "0.1.0"
+license = "MIT"
+requires-python = ">=3.9"
+authors = [
+    { name = "Oleg Bugaichuk", email = "olegussek@gmail.com" },
+]
+
 [project.scripts]
-fastest = "fastest:main"
+fastest = "fastest.main:main"
 
 [project.gui-scripts]
-fastest = "fastest:main"
+fastest = "fastest.main:main"
+
+[project.urls]
+Homepage = "https://fastest.readthedocs.io/ru/latest/"
+Source = "https://github.com/OlegBugaichuk/fastest"
